Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46239

Qt won't compile when disabling the Bearer Managment (OSX)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.5.1
    • 5.4.1, 5.5.0 Beta
    • None
    • Mac OSX 10.10
    • macOS

    Description

      On OSX the compilation always fails when disabling the Bearer Management via the flag -no-feature-bearermanagment on the configure script.

      It seems that there are two things which make the compilation go wrong:

      1. The qcorewlanengine is missing the macros to disable its compilation when the flag is set. See qcorewlanengine.mm is missing the #ifdef while qcorewlanengine.h does have it.

      2. This commit broke it also as the qnetworkaccessmanager.cpp changes, related to the new connectToHost and connectToHostEncrypted methods should be outside the QT_NO_BEARERMANAGEMENT #ifdef

      This is the output related to the qcorewlanengine:

      /Users/developer/Projects/qt_repos/qt54/qtbase/bin/moc -DQT_NO_MTDEV -DQT_NO_LIBUDEV -DQT_NO_EVDEV -DSQLITE_OMIT_LOAD_EXTENSION -DSQLITE_OMIT_COMPLETE -DSQLITE_ENABLE_FTS3 -DSQLITE_ENABLE_FTS3_PARENTHESIS -DSQLITE_ENABLE_RTREE -DQT_NO_CAST_TO_ASCII -DQT_NO_CAST_FROM_ASCII -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_PLUGIN -DQT_SQL_LIB -DQT_CORE_LIB -D__APPLE__ -D__GNUC__=4 -I/Users/developer/Projects/qt_repos/qt54/qtbase/mkspecs/macx-clang-32 -I/Users/developer/Projects/qt_repos/qt54/qtbase/src/plugins/sqldrivers/sqlite -I/Users/developer/Projects/qt_repos/qt54/qtbase/src/3rdparty/sqlite -I/Users/developer/Projects/qt_repos/qt54/qtbase/lib/QtCore.framework/Headers -I/Users/developer/Projects/qt_repos/qt54/qtbase/lib/QtCore.framework/Headers/5.4.3 -I/Users/developer/Projects/qt_repos/qt54/qtbase/lib/QtCore.framework/Headers/5.4.3/QtCore -I/Users/developer/Projects/qt_repos/qt54/qtbase/lib/QtSql.framework/Headers -I/Users/developer/Projects/qt_repos/qt54/qtbase/lib/QtSql.framework/Headers/5.4.3 -I/Users/developer/Projects/qt_repos/qt54/qtbase/lib/QtSql.framework/Headers/5.4.3/QtSql -I/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk/usr/include/c++/4.2.1 -I/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk/usr/include/c++/4.2.1/backward -I/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/clang/6.1.0/include -I/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include -I/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk/usr/include -F/Users/developer/Projects/qt_repos/qt54/qtbase/lib smain.cpp -o .moc/debug/smain.moc
      /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang++ -c -pipe -arch i386 -g -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk -std=c++11 -stdlib=libc++ -mmacosx-version-min=10.7 -fvisibility=hidden -fvisibility-inlines-hidden -fno-exceptions -Wall -W -fPIC -DQT_NO_MTDEV -DQT_NO_LIBUDEV -DQT_NO_EVDEV -DSQLITE_OMIT_LOAD_EXTENSION -DSQLITE_OMIT_COMPLETE -DSQLITE_ENABLE_FTS3 -DSQLITE_ENABLE_FTS3_PARENTHESIS -DSQLITE_ENABLE_RTREE -DQT_NO_CAST_TO_ASCII -DQT_NO_CAST_FROM_ASCII -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_PLUGIN -DQT_SQL_LIB -DQT_CORE_LIB -I. -I../../../3rdparty/sqlite -I../../../../lib/QtCore.framework/Versions/5/Headers -I../../../../lib/QtCore.framework/Versions/5/Headers/5.4.3 -I../../../../lib/QtCore.framework/Versions/5/Headers/5.4.3/QtCore -I../../../../lib/QtSql.framework/Versions/5/Headers -I../../../../lib/QtSql.framework/Versions/5/Headers/5.4.3 -I../../../../lib/QtSql.framework/Versions/5/Headers/5.4.3/QtSql -I.moc/debug -I../../../../mkspecs/macx-clang-32 -F/Users/developer/Projects/qt_repos/qt54/qtbase/lib -o .obj/debug/qsql_sqlite.o ../../../sql/drivers/sqlite/qsql_sqlite.cpp
      qcorewlanengine.mm:69:5: error: unknown type name 'QCoreWlanEngine'
          QCoreWlanEngine *engine;
          ^
      qcorewlanengine.mm:74:20: error: expected a type
      - (void)setEngine:(QCoreWlanEngine *)coreEngine;
                         ^
      qcorewlanengine.mm:75:4: error: expected a type
      - (QCoreWlanEngine *)engine;
         ^
      qcorewlanengine.mm:75:1: warning: method has no return type specified; defaults to 'id' [-Wmissing-method-return-type]
      - (QCoreWlanEngine *)engine;
      ^
                           (id)
      qcorewlanengine.mm:78:20: error: unknown type name 'QCoreWlanEngine'
      @property (assign) QCoreWlanEngine* engine;
                         ^
      qcorewlanengine.mm:101:19: error: expected a type
      -(void)setEngine:(QCoreWlanEngine *)coreEngine
                        ^
      qcorewlanengine.mm:109:3: error: expected a type
      -(QCoreWlanEngine *)engine
        ^
      qcorewlanengine.mm:109:1: warning: method has no return type specified; defaults to 'id' [-Wmissing-method-return-type]
      -(QCoreWlanEngine *)engine
      ^
                          (id)
      qcorewlanengine.mm:138:13: error: unknown type name 'QCoreWlanEngine'
                  QCoreWlanEngine* wlanEngine = static_cast<QCoreWlanEngine*>(info);
                  ^
      qcorewlanengine.mm:138:55: error: unknown type name 'QCoreWlanEngine'
                  QCoreWlanEngine* wlanEngine = static_cast<QCoreWlanEngine*>(info);
                                                            ^
      qcorewlanengine.mm:146:1: error: use of undeclared identifier 'QScanThread'
      QScanThread::QScanThread(QObject *parent)
      ^
      qcorewlanengine.mm:151:1: error: use of undeclared identifier 'QScanThread'
      QScanThread::~QScanThread()
      ^
      qcorewlanengine.mm:151:15: error: expected the class name after '~' to name a destructor
      QScanThread::~QScanThread()
                    ^
      qcorewlanengine.mm:155:6: error: use of undeclared identifier 'QScanThread'
      void QScanThread::quit()
           ^
      qcorewlanengine.mm:160:6: error: use of undeclared identifier 'QScanThread'
      void QScanThread::run()
           ^
      qcorewlanengine.mm:247:13: error: use of undeclared identifier 'QScanThread'
      QStringList QScanThread::foundNetwork(const QString &id, const QString &name, const QNetworkConfiguration::StateFlags state, const QString &in...
                  ^
      qcorewlanengine.mm:270:39: error: use of undeclared identifier 'QScanThread'
      QList<QNetworkConfigurationPrivate *> QScanThread::getConfigurations()
                                            ^
      qcorewlanengine.mm:280:6: error: use of undeclared identifier 'QScanThread'
      void QScanThread::getUserConfigurations()
           ^
      qcorewlanengine.mm:368:9: error: use of undeclared identifier 'QScanThread'
      QString QScanThread::getSsidFromNetworkName(const QString &name)
              ^
      qcorewlanengine.mm:388:9: error: use of undeclared identifier 'QScanThread'
      QString QScanThread::getNetworkNameFromSsid(const QString &ssid)
              ^
      /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang -c -pipe -arch i386 -g -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk -mmacosx-version-min=10.7 -fvisibility=hidden -fno-exceptions -Wall -W -fPIC -DQT_NO_MTDEV -DQT_NO_LIBUDEV -DQT_NO_EVDEV -DSQLITE_OMIT_LOAD_EXTENSION -DSQLITE_OMIT_COMPLETE -DSQLITE_ENABLE_FTS3 -DSQLITE_ENABLE_FTS3_PARENTHESIS -DSQLITE_ENABLE_RTREE -DQT_NO_CAST_TO_ASCII -DQT_NO_CAST_FROM_ASCII -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_PLUGIN -DQT_SQL_LIB -DQT_CORE_LIB -I. -I../../../3rdparty/sqlite -I../../../../lib/QtCore.framework/Versions/5/Headers -I../../../../lib/QtCore.framework/Versions/5/Headers/5.4.3 -I../../../../lib/QtCore.framework/Versions/5/Headers/5.4.3/QtCore -I../../../../lib/QtSql.framework/Versions/5/Headers -I../../../../lib/QtSql.framework/Versions/5/Headers/5.4.3 -I../../../../lib/QtSql.framework/Versions/5/Headers/5.4.3/QtSql -I.moc/debug -I../../../../mkspecs/macx-clang-32 -F/Users/developer/Projects/qt_repos/qt54/qtbase/lib -o .obj/debug/sqlite3.o ../../../3rdparty/sqlite/sqlite3.c
      qcorewlanengine.mm:407:6: error: use of undeclared identifier 'QScanThread'
      bool QScanThread::isKnownSsid(const QString &ssid)
           ^
      fatal error: too many errors emitted, stopping now [-ferror-limit=]
      2 warnings and 20 errors generated.
      make[6]: *** [.obj/debug/qcorewlanengine.o] Error 1
      make[5]: *** [debug-all] Error 2
      make[4]: *** [sub-corewlan-make_first] Error 2
      make[3]: *** [sub-bearer-make_first] Error 2
      make[3]: *** Waiting for unfinished jobs....
      /Applications/Xcode.app/Contents/Developer/usr
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lpotter Lorn Potter
            sinspiral Alberto Fdez
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes