Fix no bearermanagement build

As pointed out in the bug, it also fixes API use when configured
with no bearermanagement.

Task-number: QTBUG-46239
Change-Id: Ief8df85ad6acf61e8d5bb3eed54e7d6ecb84c1a0
Reviewed-by: Alex Blasche <alexander.blasche@theqtcompany.com>